@startuml MiJuegoMinecraft2D

skinparam backgroundColor #2D2D2D
skinparam class {
    BackgroundColor #454545
    ArrowColor White
    BorderColor #A0A0A0
    FontColor White
    FontName "Courier New"
}

title Estructura actual - MiJuegoMinecraft2D

enum TipoBloque {
    Aire
    Pasto
    Tierra
    Madera
    Piedra
    Agua
    Cristal
    Techo
    PuertaCerrada
    PuertaAbierta
    CaminoAldea
    CultivoTrigo
    CultivoZanahoria
    CultivoPatata
    Lava
    Cofre
    Yunque
}

enum ItemId {
    Ninguno
    BloqueTronco
    Tierra
    Piedra
    Palo
    PicoMadera
    PicoPiedra
    Antorcha
    BloqueTecho
    Cristal
    PuertaMadera
    Esmeralda
    Trigo
    Pan
    LingoteHierro
    SemillasTrigo
    Cofre
    Yunque
}

enum ProfesionAldeano {
    Granjero
    Herrero
    Bibliotecario
}

struct SlotInventario {
    + item : ItemId
    + cantidad : int
}

struct OfertaTrade {
    + costo : SlotInventario
    + resultado : SlotInventario
    + descripcion : string
}

struct Bloque {
    + tipo : TipoBloque
    + estaHidratado : bool
    + faseCultivo : int
    + tiempoCrecimiento : float
}

class Juego {
    - ventana : sf::RenderWindow
    - camara : sf::View
    - fuente : sf::Font
    - mapaSuperficie : unique_ptr<Mundo>
    - mapaSubsuelo : unique_ptr<Mundo>
    - mapaExterior : unique_ptr<Mundo>
    - jugador : unique_ptr<Jugador>
    - animales : vector<Animal>
    - zombies : vector<Zombie>
    - cofresMundo : map<string, vector<SlotInventario>>
    --
    + Juego()
    + ejecutar()
}

class Mundo {
    - ancho : int
    - alto : int
    - bloques : vector<vector<TipoBloque>>
    --
    + Mundo(ancho: int, alto: int, semilla: unsigned int)
    + generarMundo(esSubterraneo: bool)
    + actualizarCultivos(dt: float)
    + getTipoBloque(x: int, y: int) : TipoBloque
    + setBloque(x: int, y: int, tipo: TipoBloque)
    + esBloqueSolido(x: int, y: int) : bool
    + alternarPuerta(x: int, y: int) : bool
    + sembrarCultivo(x: int, y: int, cultivo: TipoBloque) : bool
    + estaCultivoMaduro(x: int, y: int) : bool
    + esInteriorTechadoEn(x: int, y: int) : bool
    + dibujarCapaSuperior(ventana: sf::RenderWindow&, jugador: sf::Vector2f)
    + dibujar(ventana: sf::RenderWindow&)
}

class Jugador {
    - posicion : sf::Vector2f
    - direccionMirada : DireccionJugador
    - salud : int
    - hambre : int
    --
    + controlar(dt: float, mundo: Mundo&)
    + recibirDanio(cantidad: int)
    + dibujar(ventana: sf::RenderWindow&)
    + getPosicion() : sf::Vector2f
}

class Animal {
    - posicion : sf::Vector2f
    - tipo : TipoAnimal
    - salud : int
    - estado : EstadoAnimal
    --
    + actualizar(dt: float, mundo: Mundo&, jugador: Jugador&)
    + recibirDanio(cantidad: int, origen: sf::Vector2f)
    + dibujar(ventana: sf::RenderWindow&)
}

class Aldeano {
    - posicion : sf::Vector2f
    - objetivo : sf::Vector2f
    - profesion : ProfesionAldeano
    - refugiandose : bool
    --
    + actualizar(dt: float, mundo: Mundo&, esNoche: bool)
    + dibujar(ventana: sf::RenderWindow&)
    + getProfesion() : ProfesionAldeano
    + getPosicion() : sf::Vector2f
    + ofertaBloqueada(indice: int) : bool
    + registrarTrade(indice: int)
}

class Zombie {
    - posicion : sf::Vector2f
    - salud : int
    - tiempoAtaque : float
    --
    + actualizar(dt: float, mundo: Mundo&, jugador: Jugador&)
    + recibirDanio(cantidad: int)
    + dibujar(ventana: sf::RenderWindow&)
}

class InventarioGrid {
    - slots : vector<SlotInventario>
    - itemCursor : SlotInventario
    - menuAbierto : bool
    - mesaCrafteoAbierta : bool
    - categoriaMesa : int
    - recetaMesaSeleccionada : int
    --
    + agregarItem(item: ItemId, cantidad: int)
    + puedeAgregarItem(item: ItemId, cantidad: int) : bool
    + manejarClicks(mouse: sf::Vector2i, izquierdo: bool, derecho: bool)
    + abrirMesaCrafteo()
    + cerrarMesaCrafteo()
    + dibujar(ventana: sf::RenderWindow&, fuente: sf::Font&)
}

class SistemaHerramientas {
    --
    + tiempoMinado(bloque: TipoBloque, herramienta: ItemId) : float
    + puedeSoltarItem(bloque: TipoBloque, herramienta: ItemId) : bool
}

class SistemaIluminacion {
    --
    + calcularSkyLight(worldTime: float) : int
    + luzAntorchasCercanas(mundo: Mundo, x: int, y: int) : float
    + lineaLuzBloqueada(mundo: Mundo, origen: sf::Vector2i, destino: sf::Vector2i) : bool
    + dibujarOscuridadSubsuelo()
    + dibujarOscuridadSuperficie()
}

class SistemaCofres {
    --
    + abrirCofre(x: int, y: int)
    + generarLootHerreria(seed: unsigned int, x: int, y: int)
    + guardarCofres(carpeta: string)
    + cargarCofres(carpeta: string)
    + dibujarUICofre()
}

class SistemaTradeo {
    --
    + ofertasDeAldeano(profesion: ProfesionAldeano) : vector<OfertaTrade>
    + validarInventario(costo: SlotInventario) : bool
    + consumirCosto(costo: SlotInventario)
    + entregarResultado(resultado: SlotInventario)
    + dibujarUITradeo()
}

Juego *-- Mundo
Mundo *-- Bloque
Juego *-- Jugador
Juego *-- Animal
Juego *-- Aldeano
Juego *-- Zombie
Juego ..> InventarioGrid
Juego ..> SistemaHerramientas
Juego ..> SistemaIluminacion
Juego ..> SistemaCofres
Juego ..> SistemaTradeo
Jugador ..> Mundo
Animal ..> Mundo
Aldeano ..> Mundo
Zombie ..> Mundo
InventarioGrid ..> SlotInventario
InventarioGrid ..> ItemId
SistemaCofres ..> SlotInventario
SistemaTradeo ..> OfertaTrade
SistemaTradeo ..> SlotInventario

@enduml
